--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -1948,3 +1948,9 @@ h1 {
   font-size: 20px;
   text-align: center;
 }
+
+/* botones tablas*/
+.btn-custom {
+  width: 180px; /* ajusta el ancho a tu gusto */
+}
+
