--- a/project/templates/Materia_Prima/proovedores.html
+++ b/project/templates/Materia_Prima/proovedores.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                      <label for="proveedor">Costo por Metro (MXN):</label>
+                      <label for="proveedor">Costo por Metro o Unidad (MXN):</label>
                       <input type="number" class="form-control" id="costxmetro" name="costxmetro" required oninput="this.value=this.value.replace(/[^0-9]/g,'')">
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                 <div class="col-md-6">
                     <div class="form-group cantidad">
                       <label for="proveedor">Cantidad a comprar:</label>
-                      <input type="number" class="form-control" id="cantidad" name="cantidad" placeholder="Metros (min: 50mts, max: 1000mts)" oninput="this.value=this.value.replace(/[^0-9]/g,'')" required min="50" max="1000">
+                      <input type="number" class="form-control" id="cantidad" name="cantidad" placeholder="Metros o unidad (min: 50, max: 5000)" oninput="this.value=this.value.replace(/[^0-9]/g,'')" required min="50" max="5000">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -98,9 +98,9 @@
                         <td>{{proovedores.materiaPrima}}</td>
                         <td>${{proovedores.costoxmetro}}.00</td>
                         <td>
-                            <button type="button" class="btn btn-success btnComprar" value="{{ proovedores.proovedoresId }}">Comprar Producto</button>
-                            <button type="button" class="btn btn-warning btnActualizar" value="{{ proovedores.proovedoresId }}">Actualizar</button>
-                            <button type="button" class="btn btn-danger btnEliminar" value="{{ proovedores.proovedoresId }}">Eliminar</button>
+                            <button type="button" class="btn btn-success btnComprar btn-custom" value="{{ proovedores.proovedoresId }}">Comprar Producto</button><br>
+                            <button type="button" class="btn btn-warning btnActualizar btn-custom" value="{{ proovedores.proovedoresId }}">Actualizar</button><br>
+                            <button type="button" class="btn btn-danger btnEliminar btn-custom" value="{{ proovedores.proovedoresId }}">Eliminar</button>
                              
                         </td>
                     </tr>
