BACK END FINALIZADO SOLO RESTA EDITAR LA INFO DE LA EMPRESA O SEA EL PURO HTML

--- a/project/templates/Materia_Prima/proovedores.html
+++ b/project/templates/Materia_Prima/proovedores.html
@@ -28,7 +28,10 @@
                 <div class="col-md-6">
                     <div class="form-group">
                       <label for="proveedor">Nombre del proveedor:</label>
-                      <input type="text" class="form-control" id="proveedor" name="proveedor" required>
+                      <select class="selectpicker form-control" id="proveedor" name="proveedor" data-live-search="true">
+                        <option value="Textiles-Leon">Textiles León</option>
+                        <option value="Cyprus">Cyprus</option> 
+                      </select>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -43,10 +46,6 @@
                       <select class="selectpicker form-control" id="materiaPrima" name="materiaPrima" data-live-search="true">
                         <option value="">Seleccione una opción</option>
                         <option value="Roja">Tela Roja</option>
-                        <option value="Azul">Tela Azul</option>
-                        <option value="Blanco">Tela Blanca</option>
-                        <option value="Militar">Tela Militar</option>
-                        <option value="Mezclilla">Tela Mezclilla</option>
                         <option value="Hilo">Hilo</option>
                         <option value="Cierre">Cierre</option>
                         <option value="Carros">Carros</option>
