--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -1954,3 +1954,23 @@ h1 {
   width: 180px; /* ajusta el ancho a tu gusto */
 }
 
+/*Finanzas*/
+.finanzas-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.finanzas-label {
+  flex-basis: 100px;
+  font-weight: bold;
+}
+
+.finanzas-value {
+  flex-grow: 1;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
